# agent-hook

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_hook/: __init__.py  hook.py  hook_point.py  middleware.py  registry.py
tests/: test_hook.py  test_hook_point.py  test_middleware.py  test_registry.py
