[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-hook"
version = "1.0.0"
description = "Lifecycle hooks and middleware for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Darshankumar Joshi", email = "darshjme@gmail.com" }]
keywords = ["llm", "agent", "hooks", "middleware", "lifecycle"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/darshjme-codes/agent-hook"
Repository = "https://github.com/darshjme-codes/agent-hook"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_hook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
